<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto" >
    
    <item android:id="@+id/context_account_info"
          android:icon="@drawable/gd_action_bar_info"
			android:title="@string/info"           
          app:showAsAction="ifRoom"  />

    <item android:id="@+id/context_account_delete"
          android:icon="@drawable/gd_action_bar_trashcan"
			android:title="@string/delete_account_confirm"           
          app:showAsAction="ifRoom"  />


    <item android:id="@+id/context_account_edit"
          android:icon="@drawable/gd_action_bar_edit"
			android:title="@string/edit"           
          app:showAsAction="ifRoom"  />

    <item android:id="@+id/context_account_add_transaction"
          android:icon="@drawable/notification_icon_transaction"
			android:title="@string/add_transaction"           
          app:showAsAction="ifRoom"  />

    <item android:id="@+id/context_account_add_transfer"
          android:icon="@drawable/notification_icon_transfer"
			android:title="@string/add_transfer"           
          app:showAsAction="ifRoom"  />

    <item android:id="@+id/context_account_update_balance"
          android:icon="@drawable/ic_functions"
			android:title="@string/update_balance"           
          app:showAsAction="ifRoom"  />

    <item android:id="@+id/context_account_delete_old"
          android:icon="@drawable/ic_delete"
			android:title="@string/delete_old_transactions"           
          app:showAsAction="ifRoom"  />

    <item android:id="@+id/context_account_close"
          android:icon="@drawable/icon_lock"
			android:title="@string/close_account"           
          app:showAsAction="ifRoom"  />

</menu>
